crates/bc-cli/tests/cli/snapshots/cli__budget__allocate_to_budget.snap
---
source: crates/bc-cli/tests/cli/budget.rs
assertion_line: 192
expression: output
---
success: true
exit_code: 0
----- stdout -----
Allocated 500 AUD to budget 'Groceries Budget' for period starting 2030-01-01
----- stderr -----
