crates/bc-cli/tests/cli/snapshots/cli__budget__archive_budget-2.snap
---
source: crates/bc-cli/tests/cli/budget.rs
assertion_line: 162
expression: output
---
success: true
exit_code: 0
----- stdout -----
No budgets.
----- stderr -----
