crates/bc-cli/tests/cli/snapshots/cli__budget__archive_budget.snap
---
source: crates/bc-cli/tests/cli/budget.rs
assertion_line: 157
expression: output
---
success: true
exit_code: 0
----- stdout -----
Archived budget: [BUDGET_ID]
----- stderr -----
