crates/bc-cli/tests/cli/snapshots/cli__budget__archive_nonexistent_budget.snap
---
source: crates/bc-cli/tests/cli/budget.rs
assertion_line: 170
expression: output
---
success: false
exit_code: 2
----- stdout -----
----- stderr -----
error: not found: [BUDGET_ID]
