crates/bc-cli/tests/cli/snapshots/cli__budget__budget_status_empty.snap
---
source: crates/bc-cli/tests/cli/budget.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
No budgets.
----- stderr -----
