crates/bc-cli/tests/cli/snapshots/cli__budget__budget_status_lists_unvalued_spend.snap
---
source: crates/bc-cli/tests/cli/budget.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 BUDGET           | PERIOD                  | ALLOCATED | ACTUALS | AVAILABLE | UNVALUED
=========================================================================================
 Groceries Budget | 2030-01-01 – 2030-01-31 | 500 AUD   | 0 AUD   | 500 AUD   | 5.00 USD
----- stderr -----
