crates/bc-cli/tests/cli/snapshots/cli__budget__create_json_includes_the_initial_revision.snap
---
source: crates/bc-cli/tests/cli/budget.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "account_id": "[ACCOUNT_ID]",
  "archived_at": null,
  "created_at": "[TIMESTAMP]",
  "id": "[BUDGET_ID]",
  "revision": {
    "budget_id": "[BUDGET_ID]",
    "created_at": "[TIMESTAMP]",
    "effective_from": "2026-01-01",
    "id": "[BUDGET_REVISION_ID]",
    "intent": "limit",
    "name": null,
    "period": {
      "type": "monthly"
    },
    "rollover": "reset_to_zero",
    "tag_filter": null,
    "target": {
      "commodity": "AUD",
      "value": "7.50"
    },
    "target_expr": "(30.00 / 4)"
  },
  "warnings": []
}
----- stderr -----
